# SLAM_book_self-learning

./: .gitignore  README.md
ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
ch2/.kdev4/: ch2.kdev4
ch3/exercise/: CMakeLists.txt  cordTransform.cpp  readME.md
ch3/useEigen/: .CMakeLists.txt.swp  CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch3/visualizeGeometry/: .CMakeLists.txt.swp  CMakeLists.txt
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch5/: CMakeLists.txt  imageBasicOperation.cpp
ch5/jointMap/: CMakeLists.txt  jointMap.cpp
ch6/ceres_curve_fitting/: CMakeLists.txt  curveFitting.cpp  function  iteration_result  least square 
ch6/g2o_curve_fitting/: CMakeLists.txt  g2oFitting.cpp  iteration_G-N_result_1  iteration_G-N_result_2  iteration_Levenberg_result  iteration_dogleg_result
ch7/: CMakeLists.txt  all_match  feature_extraction.cpp  optimized  pose_estimation.cpp  pose_estimation3d2d_result  pose_estimation3d3d_result1  pose_estimation3d3d_result2  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  pose_estimation_result  triangulation.cpp  triangulation_result_partial
